Version 1.6.8
- BUG: Exporting via DnD from the repository browser could 
       create garbled paths if the urls of the files 
       required escaping. (Stefan)
- BUG: Properties loaded from a file were not changed or
       added without a manual edit of the loaded content. (Stefan)
- BUG: The /logmsg param wasn't used in the copy command. (Stefan)
- BUG: The commonUrl and commonRoot parameters in the
       CheckCommit method of the IBugtraqProvider2 interface
       could return wrong paths/urls. (Stefan)
- BUG: Updating two items from different paths to get a sparse
       checkout didn't work. (Stefan)
- BUG: Handling of multi-page TIFF files in TortoiseIDiff could
       lead to a crash. (Stefan)
- CHG: Various adjustments for Windows 7. (Stefan)
- CHG: The "show excluded folders as normal" setting is
       changed to false by default. (Stefan)
- CHG: On W2k, don't update to incompatible (future) TSVN versions. 
       (Stefan Fuhrmann)

Version 1.6.7
- BUG: The status cache could segfault in some situations. (Stefan)
- BUG: Memory leak in SubWCRevCOM. (Stefan)
- BUG: The copy-from url in the Check-for-modifications Dialog
       was wrong for single files. (Stefan)
- BUG: TortoiseIDiff didn't handel multi-page tiff images
       properly and could even crash. (Stefan)
- BUG: SubWCRevCOM could only be used by one single application
       at a time. (Stefan)
- BUG: The column order wasn't saved correctly in the status
       list control. (Stefan)
- BUG: The message "only numbers are allowed" could be shown even
       when the bugtraq:number property was set to false. (Stefan)
- BUG: The "diff with previous revision" in the log dialog could
       use the wrong revision if there was a path with a copyfrom
       revision. (Stefan)
- BUG: Deadlock in the shell extension when used from a multi-threaded
       application. (Jonathan Potter, GP Software and Stefan)
- BUG: The "commonURL" parameter in the CheckCommit() method of the